--- a/src/css/paste.css
+++ b/src/css/paste.css
@@ -118,6 +118,14 @@ body {
     cursor: pointer;
 }
 
+#gz-icp {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    color: #424242;
+    font-size: 12px;
+}
+
 @media screen and (max-width: 820px) {
     #code-main {
         margin: 0px;
@@ -133,12 +141,6 @@ body {
     #submit {
         margin-right: 10px;
     }
-    #bookmark-box {
-        display: none;
-    }
-    #qgroup {
-        display: none;
-    }
 }
 
 @media screen and (max-width: 1100px) {
@@ -146,6 +148,9 @@ body {
         display: none;
     }
     #qgroup {
+        display: none;
+    }
+    #gz-icp {
         display: none;
     }
 }
